# ml-ops-course

./: LICENSE  README.md
lab01/homework/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lab01/homework/model/sentence-transformer/: config_sentence_transformers.json
lab01/homework/src/: app.py
lab01/homework/src/api/models/: sentiment.py
lab01/homework/src/models/: inference.py
lab01/homework/tests/: test_app.py
lab01/lab/: .sops.yaml  Dockerfile  README.md  public_key.asc  pyproject.toml  secrets.yaml
lab01/lab/config/: .env.dev  .env.prod  .env.test
lab01/lab/model/: model.joblib
lab01/lab/src/: app.py  main.py  settings.py
lab01/lab/src/models/: inference.py  training.py
lab01/lab/tests/: test_app.py  test_settings.py
lab02/homework/: compose.yaml  homework.ipynb  pyproject.toml
lab02/lab/: docker-compose.yaml  notebook_01_psycopg.ipynb  notebook_02_duckdb.ipynb  pyproject.toml
