[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "fastapi>=0.119.0",
    "joblib>=1.5.2",
    "pydantic>=2.12.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "uvicorn>=0.37.0",
]
