[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "pre-commit>=4.3.0",
    "pydantic==2.12.2",
    "pydantic-core==2.41.4",
    "pydantic-settings>=2.11.0",
    "pytest-dotenv>=0.5.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
env_files = "config/.env.test"
