[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "pandas",
    "jupyter>=1.1.1",
    "psycopg[binary]",
    "matplotlib>=3.10.7",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
